2005-03-08 10:42  antirez

	* ChangeLog, jim.c, regtest.tcl: Applied patch about unset a(x)
	  against non existing 'a' variable (Clemens Hintze). Dictionary
	  handling code and error messages modified a bit (me).

2005-03-07 21:53  antirez

	* ChangeLog, jim.c: Fixed a memory leak introduced with the last
	  callframe caching code commit.

2005-03-07 21:34  antirez

	* ChangeLog, jim.c, jim.h: Faster procedure calls (obtained caching
	  the hashtable, and with a fast path to free the cached hash
	  tables elements).

2005-03-07 18:58  antirez

	* ChangeLog, jim.c: Added "increasing", "decreasing", "ascii",
	  "nocase" options to lsort (SS). The plan is to don't add more
	  options than this, but -command, and put "dictionary style"
	  comparison in [string dictcompare].

2005-03-07 17:03  antirez

	* ChangeLog, Makefile, bench.tcl, jim.c: [lsort] command and list
	  sorting low-level functions (Pat Thoyts).  Speedup for floating
	  point math (me).

2005-03-07 16:30  patthoyts

	* jim.c, jim.h: Refactored the [info] command and added body and
	  version to the command.  Added a simple version of [lsort] (no
	  options yet).

2005-03-07 15:17  antirez

	* ChangeLog, jim.c: specializing version of while (still not
	  complete, but already handles most of the cases that it's worth
	  to optimize).

2005-03-07 09:23  antirez

	* ChangeLog, TODO: TODO changes

2005-03-06 23:42  antirez

	* bench.tcl, jim.c, regtest.tcl, test.tcl: A specializing version
	  of [for] that appears able to match the performaces of Tcl8.4 for
	  the specialized forms. The implementation is a bit complex so may
	  contain bugs... to handle with care.	Also a [for] bug about
	  [continue] was fixed and the regression test added.

2005-03-06 11:43  antirez

	* ChangeLog, jim.c, jim.h, doc/AIO-Extension.txt: Fixed a race
	  condition in the garbage collection code.  In order to fix this,
	  now the hash table iterator works in a way that's save to delete
	  returned entries during the iteration.